2017-09-17 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/examples.xml: moved into final directory

2017-09-15 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio.tcl: new version 1.1 of class Database
    new method mkdir for class Result
    * docs/Makefile.am: removed automatic manual creation upon installation

2017-09-03 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio_Mysql.c: unqualified string command conflicted
    with Database class same method 

2017-08-18 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio.tcl: method build_where_clause treated
    single value key differently, but this failed to remove braces
    for the representation of a single element list containing space
    characters. The method has been changed the have an uniform
    way to handle this

2017-08-07 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/mod_rivet.c: Rivet_ServerInit is now implementing
	the recommended mechanism to avoid the double load of external
	modules

2017-07-24 Massimo Manghi <mxmanghi@apache.org>
	* xml/rivet.xml.in: reflects rivet.xml having been moved to doc/xml
	* rivet/default_request_handler.tcl: code of the default 
	request handler read by mod_rivet
    * Makefile.am: now installing also rivet/default_request_handler.tcl
    * src/mod_rivet_ng/mod_rivet.c: add function for creation of 
    the module_globals strucuture. This structure is not assumed anymore
    to be inherited through a fork operation and it's now in case 
    re-created at child process initialization
    * src/mod_rivet_ng/rivet_lazy_mpm.c: removing
    reference to unused global variable
    * src/mod_rivet_ng/mod_rivet_common.c: Rivet_RunningScripts
    handling default request procedure specified in the configuration
    
2017-07-20 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/formbroker/formbroker.tcl: now using Tcl
    [string is boolean ...]
    
2017-07-19 Massimo Manghi <mxmanghi@apache.org>