@@ -108,22 +108,29 @@
 	</section>
 	
 	<section>
-		<title>Example: a one script Rivet Application</title>
+		<title>Example: basic OO Rivet Application</title>
 		<para>
 			An applications may have no interest in running
-			a script pointed by the URL and their code rely
-			entirely on the main application script which internally
-			will call ::rivet::parse command to display HTML code.
-			The status of such applications will be driven by the URL 
-			encoded argument pairs. Such application 
-			(let's call it MyRivetApp) could be
-			represented by an Itcl object instance. In myrivetapp.tcl
+			a script pointed by the URL as in the traditional approach 
+			followed by rivet inspired to the PHP philosophy of <quote>scripting
+			the HTML</quote>. A web based application
+			could be driven entirely by the URL encoded arguments and by the
+			data POSTed with HTML forms. In other words an application could
+			hinge on a single entry point to handle requests, regardless
+			the complexity of its internal design. 
+		</para>
+		<para>This section shows a template for such an application 
+			(let's call it MyRivetApp) based on an Itcl (or TclOO for what 
+			it matters) object instance. In myrivetapp.tcl
 			the application class is defined and an instance of it is
 			created in the global namespace. 
-			
-			
 		</para>
-		<programlisting>package require Itcl
+		<programlisting># myrivetapp.tcl -- 
+#
+# Application class definition and instance creation
+#
+
+package require Itcl
 
 ::itcl::class MyRivetApp {
 
@@ -136,25 +143,25 @@
 
 ::itcl::body MyRivetApp::init {app_name}{
 
-	# any initialization steps must go here
-	# ....
+   # any initialization steps must go here
+   # ....
 	
-	set application_name $app_name	
+   set application_name $app_name	
 	
 }
 
 ::itcl::body MyRivetApp::request_processing {urlencoded_args} {
 
-# the whole application code will take place starting
-# from this method
-
-...
+   # the whole application code will run from this method
+   ...
 
 }
 
 set ::theApplication [MyRivetApp #auto]
 
-$::theApplication init [dict get [::rivet::inspect server] hostname]</programlisting>
+$::theApplication init [dict get [::rivet::inspect server] hostname]
+
+# -- myrivetapp.tcl </programlisting>
 		<para>
 			which provides a very basic interface for both initialization
 			and request processing. Such script will be sourced into the
@@ -175,21 +182,61 @@ $::theApplication init [dict get [::rivet::inspect server] hostname]</programlis
 		<programlisting># -- myapp_request_handler.tcl
 #
 # This script will be read by mod_rivet at the thread initialization
-# stage and its content stored in a Tcl_Obj to be passed to the
-# Tcl_EvalObjExe
+# stage and its content stored in a Tcl_Obj object. This object will
+# be evaluated calling Tcl_EvalObjExe
+#
 
 ::try {
-        ::theApplication request_processing [::rivet::var_qs all]
-    } trap {RIVET ABORTPAGE} {err opts} {
-        ::Rivet::finish_request $script $err $opts AbortScript
-    } trap {RIVET THREAD_EXIT} {err opts} {
-        ::Rivet::finish_request $script $err $opts AbortScript
-    } on error {err opts} {
-        ::Rivet::finish_request $script $err $opts
-    } finally {
-        ::Rivet::finish_request $script "" "" AfterEveryScript
-    }
+
+    ::theApplication request_processing [::rivet::var_qs all]
+
+} trap {RIVET ABORTPAGE} {err opts} {
+	 
+    switch [::rivet::abort_code] {
+	   code1 {
+		   # handling abort_page with code1
+		   ....
+	   }
+	   code2 {
+		   # handling abort_page with code2
+	      ....		
+	   }
+ 	   ....
+ 	   default {
+         # default abort handler	 	
+ 	   }
+   }
+
+} trap {RIVET THREAD_EXIT} {err opts} {
+    
+    # myApplication sudden exit handler
+    ...
+
+} on error {err opts} {
+
+    # myApplication error handler
+    ...
+
+} finally {
+
+    # request processing final elaboration
+    
+}
 
 # -- myapp_request_handler.tcl</programlisting>
 	</section>
+	<para>
+		We have to tell mod_rivet to run this script when a
+		requested is delivered to myApplication and we do so
+		using the &version30; directive <command>RequestHandler</command> 
+	</para>
+<programlisting>&lt;IfModule rivet_module&gt;
+    RivetServerConf ChildInitScript "source myrivetapp.tcl"
+    RivetServerConf RequestHandler  "myapp_request_handler.tcl"
+&lt;/IfModule&gt;</programlisting>
+	<para>
+		Notice that the argument of the directive <command>RequestHandler</command>
+		is a file name not a Tcl script as for <command>ChildInitScript</command>
+	</para>
+
 </section>
